...
}

// MARK: - TabBar Setup
extension HomeTabBarViewController {
    private
    func setupTabBar() {
        containerView.accessibilityIdentifier = "homeTabBarContainer"
        
        let homeCoordinator = HomeCoordinator(containerView: containerView,
                                              hideTabBar: hideTabBar,
                                              showTabBar: showTabBar)
        let homeTab = TabBarMenuItemData(type: .home,
                                         coordinator: homeCoordinator)
...
